--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta charset='uft-8'/>
     <meta name='viewport' content='width=device=width, scale-initial=1.0'/>
     <link rel='stylesheet' href='css/main.css'/>
+    <link rel='stylesheet' href='css/animate.css'/>
+    
     
 </head>
 <body>
-    <nav class='navigation'>
+    <nav class='navigation animated slideInDown'>
         <div class='elem-menubar'>
             <div class='menubar'></div>
             <div class='menubar'></div>
         </div>
         <ul>
-            <li><img src='images/apple.png'</li>
+            <li><img class='animated bounce' src='images/apple.png'</li>
             <li class='navbar'>mac</li>
             <li class='navbar'>ipad</li>
             <li class='navbar'>iphone</li>
